--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -10,6 +10,7 @@
     <h1>Good Cookie recipe!</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7393315.jpg&w=595&h=595&c=sc&poi=face&q=60" alt="Picture of good cookies.">
     <p>So, above is a grainy pictures of some cookies that look <em>DELICIOUS</em>. Anyway I don't know much about cookies, so I am just doin this for odin! <strong>:D</strong></p>
+    <h1>Ingredients</h1>
     <ul><li>1/2 cup white sugar</li><li>1 cup packed brown sugar</li><li>1/2 cup of butter, softened</li>
     <li>2 eggs</li><li>2 cups of all purpose white flower.</li><li>1 teaspoon baking soda.</li><li>1/2 teaspoon salt.</li>
     <li>1 cup chopped almonds.</li><li>3 cups semi-sweet choco chips.</li></ul>
