--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Odin Recipes!</h1>
     <a href="file:///home/tor/repos/odin-recipes/recipes/cookies.html">Good cookies.</a>
+    <a href="file:///home/tor/repos/odin-recipes/recipes/watermelonpops.html">Watermelon pops recipe</a>
     
 </body>
 </html>
