--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes!</h1>
-    <a href="file:///home/tor/repos/odin-recipes/recipes/cookies.html">Good cookies.</a>
-    <a href="file:///home/tor/repos/odin-recipes/recipes/watermelonpops.html">Watermelon pops recipe</a>
+    <ul><li><a href="file:///home/tor/repos/odin-recipes/recipes/cookies.html">Good cookies.</a></li>
+    <li><a href="file:///home/tor/repos/odin-recipes/recipes/watermelonpops.html">Watermelon pops recipe</a></li></ul>
     
 </body>
 </html>
