--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Odin Recipes!</h1>
     <ul><li><a href="file:///home/tor/repos/odin-recipes/recipes/cookies.html">Good cookies.</a></li>
-    <li><a href="file:///home/tor/repos/odin-recipes/recipes/watermelonpops.html">Watermelon pops recipe</a></li></ul>
+    <li><a href="file:///home/tor/repos/odin-recipes/recipes/watermelonpops.html">Watermelon pops recipe</a></li>
+    <li><a href="file:///home/tor/repos/odin-recipes/recipes/chili.html">Delicous chili</a></li></ul>
     
 </body>
 </html>
