--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
-    <h1>Odin Recipes!</h1>
+    <h1 class="page-one-head">Odin Recipes!</h1>
     <ul><li><a href="file:///home/tor/repos/odin-recipes/recipes/cookies.html">Good cookies.</a></li>
     <li><a href="file:///home/tor/repos/odin-recipes/recipes/watermelonpops.html">Watermelon pops recipe</a></li>
     <li><a href="file:///home/tor/repos/odin-recipes/recipes/chili.html">Delicous chili</a></li></ul>
+   
     
 </body>
 </html>
